Fix long text wrapping. Close the details when switching models.

--- a/jujugui/static/gui/src/app/components/entity-header/_entity-header.scss
+++ b/jujugui/static/gui/src/app/components/entity-header/_entity-header.scss
@@ -74,7 +74,7 @@
             display: none;
         }
 
-        .generic-button {
+        .multi-button {
             margin-top: 10px;
         }
     }
@@ -172,5 +172,9 @@
         .svg-icon {
             fill: #dc4a38;
         }
+    }
+
+    .multi-button .button--positive:first-child {
+        white-space: nowrap;
     }
 }
